Changelog
=========

1.2-dev0 - (unreleased)
---------------------------

1.1 - (2025-03-06)
---------------------------
* Change: Update README.md [alecghica]

1.0a1 - (2025-03-06)
---------------------------
* Task: Initial release
  [david-batranu - refs #281898]