@@ -82,8 +82,9 @@ setup(
         ],
     },
     entry_points="""
-    [z3c.autoinclude.plugin]
+    [plone.autoinclude.plugin]
     target = plone
+    module = pas.plugins.eea
     [console_scripts]
     update_locale = pas.plugins.eea.locales.update:update_locale
     sync_eea_entra = pas.plugins.eea.scripts.sync:run_standalone
