@@ -1,6 +1,7 @@
 """ Sync users. """
 
 import argparse
+import logging
 from datetime import datetime
 
 import Zope2
@@ -8,10 +9,13 @@ from AccessControl.SecurityManagement import newSecurityManager
 from AccessControl.users import system as system_user
 from Testing.makerequest import makerequest
 from Zope2.Startup.run import make_wsgi_app
+
 from zope.component.hooks import setSite
 from zope.globalrequest import setRequest
 
 from pas.plugins.eea.sync import SyncEntra
+
+logger = logging.getLogger(__name__)
 
 parser = argparse.ArgumentParser(
     prog="EEAEntraSync",
@@ -25,6 +29,7 @@ parser.add_argument(
     required=True,
     help="Portal ID",
 )
+
 
 def run_standalone():
     parser.add_argument(
@@ -50,12 +55,17 @@ def run(app):
 
     syncer = SyncEntra()
 
-    print("Syncing users and groups...")
+    logger.info("Syncing users and groups...")
     t0 = datetime.now()
     syncer.sync_all()
     seconds = (datetime.now() - t0).total_seconds()
-    print(f"...sync complete after {seconds} seconds.")
+    logger.info("...sync complete after %s seconds.", seconds)
 
 
 if __name__ == "__main__":
+    logger.warning(
+        "This will fail when called with zconsole run, as that "
+        "command doesn't pass the arguments to this script, so there "
+        "is no way to provide the portal id."
+    )
     run(Zope2.app())
